--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -38,6 +38,11 @@
             <artifactId>gson</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>2.0.11</version>
+        </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
