--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -39,10 +39,11 @@
         </dependency>
 
         <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
+            <groupId>com.alibaba.fastjson2</groupId>
+            <artifactId>fastjson2</artifactId>
             <version>2.0.11</version>
         </dependency>
+
 
         <dependency>
             <groupId>org.projectlombok</groupId>
