--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -30,6 +30,11 @@
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
 
@@ -58,7 +63,6 @@
             <artifactId>fastjson2</artifactId>
             <version>2.0.11</version>
         </dependency>
-
 
         <dependency>
             <groupId>org.projectlombok</groupId>
